# risk-constrained-mm

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: bindings.cpp
cpp/include/data/: market_data_parser.hpp  replay_engine.hpp  tick.hpp
cpp/include/env/: market_env.hpp
cpp/include/lob/: order.hpp  order_book.hpp  order_map.hpp  order_queue.hpp  pool.hpp  price_level.hpp  types.hpp
cpp/include/sim/: hawkes_params.hpp  hawkes_simulator.hpp
cpp/src/: stub.cpp
docs/paper/: main.tex
python/rcmm/: __init__.py  baselines.py  cppo.py  env.py  ppo.py  regime_wrapper.py  stats.py
python/scripts/: evaluate_oos.py  evaluate_regimes.py  plot_results.py  train_baseline.py
tests/cpp/: test_hawkes_simulator.cpp  test_market_data_parser.cpp  test_matching.cpp  test_order_book.cpp  test_order_map.cpp  test_order_queue.cpp  test_pool.cpp  test_replay_engine.cpp  test_smoke.cpp
tests/python/: conftest.py  test_baselines.py  test_cppo.py  test_env.py  test_ppo.py  test_smoke.py  test_stats.py
